# smart-hos-mgmt

./: .gitignore  CMakeLists.txt  README.md  hos_app.db  main.cpp  patient.db  requirements.txt  server.cpp
client-patient/: CMakeLists.txt
client-patient/src/: App.cpp  App.h  main.cpp
client-patient/src/net/: ClientSocket.cpp  ClientSocket.h
client-patient/src/ui/: LoginWindow.cpp  LoginWindow.h  PatientHomeWindow.cpp  PatientHomeWindow.h
common/: CMakeLists.txt
common/src/: Protocol.cpp  Utils.cpp
config/: server_config.json
docs/: SRS_智慧医疗管理系统.md
hos-mgmt/: hos-mgmt.pro
hos-mgmt/app-client/: app-client.pro  client.cpp  client.h  client.qrc  main.cpp
hos-mgmt/app-server/: DatabaseManager.cpp  DatabaseManager.h  a.sqlite  app-server.pro  app.py  asr_service.py  databasemanager.cpp  databasemanager.h  datamodel.qmodel  doctor.db  doctor.sqlite  health.sqlite  main.cpp  o.db  patient.db  patient.sqlite  repositories.py  routes_doctor_chat.py  server.cpp  server.h  server.py  services.py
hos-mgmt/build-qt512/: Makefile  app-server  moc_appointment.cpp  moc_databasemanager.cpp  moc_server.cpp  moc_user.cpp
infra/: sqlite_store.py
models/: appointment.cpp  doctor.cpp  doctor.h  user.h
scripts/: install_redis_plus_plus.sh
server/: CMakeLists.txt
server/src/: ClientSession.cpp  ClientSession.h  Router.cpp  Router.h  ServerConfig.cpp  ServerConfig.h  TcpServer.cpp  TcpServer.h  main.cpp
server/src/handlers/: AuthHandler.cpp  AuthHandler.h
server/src/models/: User.h
server/src/redis/: RedisStore.cpp  RedisStore.h
smart-hos-mgmt/hos-mgmt/: hos-mgmt.pro
个人代码-周沛智/聊天室/: Makefile  MyselfQQ  MyselfQQ.pro  MyselfQQ.pro.user.3.2-pre1  MyselfQQ.pro.user.f29409a  drawer.cpp  images.qrc  main.cpp  moc_client.cpp  moc_drawer.cpp  moc_server.cpp  moc_widget.cpp  qrc_images.cpp  ui_widget.h
个人代码-董崇未/: hospitalizationwindow.cpp  mainwindow.cpp  owndeal.cpp
(+166 files in other folders)
